--- a/views/sneak.erb
+++ b/views/sneak.erb
@@ -62,7 +62,7 @@
 		<div class="movie">
 			<img class="movie-img" src="../../poster.png" />
 			<div class="movie-desc">
-				<h2 class="movie-title">Django</h2>
+				<h2 class="movie-title">Django Unchained</h2>
 			</div>
 		</div>
 	</div>
