--- a/views/index.erb
+++ b/views/index.erb
@@ -10,11 +10,11 @@
 		margin:0;
 		padding:0;
 		font-size:22px;
+		background:#000;
 	}
 
 	#main {
 		text-align:center;
-		margin-top:20%;
 	}
 	a {
 		text-decoration: none;
@@ -22,8 +22,7 @@
 </style>
 <body>
 	<div id="main">
-		<img src="../../logo.png" />
-		<br /><br /><br />
+		<img src="../../biglogo.png" style="height:600px" /><br />
 		<a href="https://foursquare.com/oauth2/authenticate?client_id=LJEDFWI00IQGGDZL3FKVVZEPSJDJDYDCHOSNWFNIVIVVJMRE&amp;response_type=code&amp;redirect_uri=http://ancient-crag-6996.herokuapp.com/login_redirect"><img src="../../connect.png" /></a>
 	</div>
 </body>
