adding dyamic theater name

--- a/views/sneak.erb
+++ b/views/sneak.erb
@@ -59,7 +59,7 @@
 <body>
 	<div id="top" class="movie">
 		<img src="../../logo.png" style="height:80px" />
-		<h2 class="theater-title">AMC Empire 25</h2>
+		<h2 class="theater-title"><%= theater_name %></h2>
 		<p>Shows Starting Now or Playing Shortly</p>
 		<img src="../../arrow.png" />
 	</div>
